# SYCLTesting

./: .gitmodules  CMakeLists.txt  LICENSE  SYCLTestsConfig.cmake.in
test/: CMakeLists.txt  kokkos_sycl_test1.cpp  sycl_usm_tests.cpp
